add istio stuff for delay

--- a/deployments/banklo-authorizer-adapter/templates/virtualservice.yaml
+++ b/deployments/banklo-authorizer-adapter/templates/virtualservice.yaml
@@ -15,3 +15,7 @@ spec:
             host: {{ include "banklo-authorizer-adapter.fullname" . }}
             subset: v2
           weight: 20
+          fault:
+            delay:
+              fixedDelay: 3s
+              percentage: 100
